[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.745098, 0.560784, 0.560784, 1 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 320.0
margin_bottom = 104.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 298.0
margin_bottom = 62.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 277.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Auto sign in to google play leaderboard"

[node name="SignOutButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_left = 75.0
margin_top = 44.0
margin_right = 202.0
margin_bottom = 62.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Sign out of google play"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 128.0
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 87.0
margin_right = 177.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Return to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 181.0
margin_right = 233.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "Credits"
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/SignOutButton" to="." method="_on_SignOutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Credits" to="." method="_on_Credits_pressed"]
